Namespace/mongo-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
spec:
  containers:
  - name: mongo
    image: mongo:3.6
    volumeMounts:
    - mountPath: "/data/db"
      name: data
  volumes:
  - name: data
    emptyDir: {}
