Namespace/mongo-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
spec:
  containers:
  - name: mongo
    image: mongo:3.6
    volumeMounts:
    - mountPath: "/data/db"
      name: data-db
  volumes:
  - name: data-db
    persistentVolumeClaim:
      claimName: claim
